k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ulpf
  labels:
    app.kubernetes.io/name: ulpf
