k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ulpf
  namespace: ulpf
  labels:
    app.kubernetes.io/name: ulpf
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ulpf
  ports:
    - name: http
      port: 8000
      targetPort: http
